--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
 						</div>
 
 						<div class="card-footer">
-							<a class="social-icon" href="http://www.twitter.com/Rachel_Gren" target="_blank">
+							<!-- <a class="social-icon" href="http://www.twitter.com/Rachel_Gren" target="_blank">
 								<i class="fa fa-twitter fa-2x icon-space"></i>
 							</a>
 							<a class="social-icon" href="http://www.instagram.com/ashlinpento_" target="_blank">
 								<i class="fa fa-instagram fa-2x icon-space"></i>
-							</a>
+							</a> -->
 						</div>
 
 					</div>
